--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <script src="./scripts/script.js" type="module"></script>
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="header">Header</div>
+    <div class="main-div">
+      <div class="banner">Banner</div>
+      <div class="main">
+        <div class="sidebar">Sidebar</div>
+        <div class="main-content">Main Content</div>
+      </div>
+    </div>
+    <div class="footer">Footer</div>
+  </body>
+</html>
