--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="header">Header</div>
+    <div class="header">
+      <div class="logo"></div>
+      <div class="navbar">
+        <a href="Home">Home</a>
+        <a href="Mammals">Mammals</a>
+        <a href="Birds">Birds</a>
+        <a href="Reptiles">Reptiles</a>
+        <a href="About">About</a>
+      </div>
+    </div>
     <div class="main-div">
       <div class="banner">Banner</div>
       <div class="main">
