--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <div class="main-div">
       <div class="banner">Banner</div>
       <div class="main">
-        <div class="sidebar">Sidebar</div>
+        <div class="sidebar">
+          <h4 class="sidebar-title">Animals</h4>
+          <div class="sidebar-button">Button</div>
+        </div>
         <div class="main-content">Main Content</div>
       </div>
     </div>
