--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="banner">Banner</div>
       <div class="main">
         <div class="sidebar">
-          <h4 class="sidebar-title">Animals</h4>
+          <h4 class="sidebar-title">Our Animals</h4>
         </div>
         <div class="main-content">Main Content</div>
       </div>
