--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="header">Header</div>
     <div class="main-div">
-      <div class="banner">Banner</div>
+      <div class="banner"></div>
       <div class="main">
         <div class="sidebar">Sidebar</div>
         <div class="main-content">Main Content</div>
