--- a/reptiles.html
+++ b/reptiles.html
@@ -13,10 +13,10 @@
   <div class="header">
     <div class="logo"></div>
     <div class="navbar">
-      <a href="Home">Home</a>
+      <a href="index.html">Home</a>
       <a href="Mammals">Mammals</a>
       <a href="Birds">Birds</a>
-      <a href="Reptiles">Reptiles</a>
+      <a href="reptiles.html">Reptiles</a>
       <a href="About">About</a>
     </div>
   </div>
