--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <div class="header">
       <div class="logo"></div>
       <div class="navbar">
-        <a href="Home">Home</a>
-        <a href="Mammals">Mammals</a>
+        <a href="index.html">Home</a>
+        <a href="mammals.html">Mammals</a>
         <a href="Birds">Birds</a>
         <a href="Reptiles">Reptiles</a>
         <a href="About">About</a>
       </div>
     </div>
     <div class="main-div">
-      <div class="banner">Banner</div>
+      <div class="banner"></div>
       <div class="main">
-        <div class="sidebar">Sidebar</div>
+        <div class="sidebar"></div>
         <div class="main-content">Main Content</div>
       </div>
     </div>
