--- a/mammals.html
+++ b/mammals.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/mammals.css">
+  
   <script src="./scripts/mammals.js" type="module"></script>
   <title>Mammals</title>
 </head>
@@ -11,8 +12,8 @@
     <div class="header">
       <div class="logo"></div>
       <div class="navbar">
-        <a href="Home">Home</a>
-        <a href="Mammals">Mammals</a>
+        <a href="index.html">Home</a>
+        <a href="mammals.html">Mammals</a>
         <a href="Birds">Birds</a>
         <a href="Reptiles">Reptiles</a>
         <a href="About">About</a>
@@ -21,7 +22,7 @@
     <div class="main-div">
       <div class="banner">Banner</div>
       <div class="main">
-        <div class="sidebar">Sidebar</div>
+        <div class="sidebar"></div>
         <div class="main-content"></div>
       </div>
     </div>
