--- a/reptiles.html
+++ b/reptiles.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reptiles</title>
   <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/reptiles.css">
   <script src="./scripts/reptiles.js" defer></script>
 </head>
 
@@ -21,10 +22,10 @@
     </div>
   </div>
   <div class="main-div">
-    <div class="banner">Banner</div>
+    <div class="reptiles-banner"></div>
     <div class="main">
-      <div class="sidebar">Sidebar</div>
-      <div class="main-content">Main Content</div>
+      <div class="sidebar"></div>
+      <div class="main-content"></div>
     </div>
   </div>
   <div class="footer">Footer</div>
