defauult message added to the main content

--- a/reptiles.html
+++ b/reptiles.html
@@ -24,11 +24,22 @@
   <div class="main-div">
     <div class="reptiles-banner"></div>
     <div class="main">
-      <div class="sidebar"></div>
-      <div class="main-content"></div>
+      <div class="sidebar">
+        <h4 class="sidebar-title">Reptiles</h4>
+        <div class="sidebar-button frill-necked-lizard">Frill-Necked Lizard</div>
+        <div class="sidebar-button hawksbill-turtle">Hawksbill Turtle</div>
+        <div class="sidebar-button perentie">Perentie</div>
+      </div>
+      <div class="main-content">
+        <div class="default-message">
+          Reptiles have roamed the Earth for millions of years, adapting to environments ranging from deserts
+          to tropical wetlands. Australia hosts an incredible variety of reptiles, many of which cannot be found
+          anywhere else in the world. Choose a reptile from the sidebar to discover its habits, diet, and unique traits.
+
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="footer">Footer</div>
+    <div class="footer">Footer</div>
 </body>
 
 </html>
