page title added

--- a/reptiles.html
+++ b/reptiles.html
@@ -32,6 +32,7 @@
       </div>
       <div class="main-content">
         <div class="default-message">
+          <h1 class="page-title">Reptiles</h1>
           Reptiles have roamed the Earth for millions of years, adapting to environments ranging from deserts
           to tropical wetlands. Australia hosts an incredible variety of reptiles, many of which cannot be found
           anywhere else in the world. Choose a reptile from the sidebar to discover its habits, diet, and unique traits.
