--- a/birds.html
+++ b/birds.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <script src="./scripts/script.js" type="module"></script>
+    <link rel="stylesheet" href="./styles/birds.css" />
+    <script src="./scripts/birds.js" type="module"></script>
     <title>Document</title>
   </head>
   <body>
@@ -15,18 +16,16 @@
       <div class="navbar">
         <a href="Home">Home</a>
         <a href="Mammals">Mammals</a>
-        <a href="Birds">Birds</a>
+        <a href="birds.html">Birds</a>
         <a href="Reptiles">Reptiles</a>
         <a href="About">About</a>
       </div>
     </div>
     <div class="main-div">
-      <div class="banner"></div>
+      <div class="banner-birds"></div>
       <div class="main">
-        <div class="sidebar">
-          <h4 class="sidebar-title">Our Animals</h4>
-        </div>
-        <div class="main-content">Main Content</div>
+        <div class="sidebar"></div>
+        <div class="main-content">WELCOME TO BIRDS PAGE</div>
       </div>
     </div>
     <div class="footer">
