--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <script src="./scripts/script.js" type="module"></script>
     <title>Document</title>
   </head>
   <body>
     <div class="header">
       <div class="logo"></div>
+
       <div class="navbar">
         <a href="index.html">Home</a>
         <a href="mammals.html">Mammals</a>
@@ -19,7 +24,7 @@
       </div>
     </div>
     <div class="main-div">
-      <div class="banner"></div>
+      <div class="banner">Banner</div>
       <div class="main">
         <div class="sidebar"></div>
         <div class="main-content">Main Content</div>
