--- a/mammals.html
+++ b/mammals.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/mammals.css">
-  
-  <script src="./scripts/mammals.js" type="module"></script>
-  <title>Mammals</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/mammals.css" />
+
+    <script src="./scripts/mammals.js" type="module"></script>
+    <title>Mammals</title>
+  </head>
+  <body>
     <div class="header">
       <div class="logo"></div>
       <div class="navbar">
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="main-div">
-      <div class="banner">Banner</div>
+      <div class="banner"></div>
       <div class="main">
         <div class="sidebar"></div>
         <div class="main-content"></div>
