--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <img src="./images/Logo.png" alt="Logo" />
       </div>
       <div class="navbar">
-        <a href="Home">Home</a>
-        <a href="Mammals">Mammals</a>
-        <a href="Birds">Birds</a>
-        <a href="Reptiles">Reptiles</a>
-        <a href="About">About</a>
+        <a href="/index.html">Home</a>
+        <a href="/mammals.html">Mammals</a>
+        <a href="/birds.html">Birds</a>
+        <a href="/reptiles.html">Reptiles</a>
+        <a href="/about.html">About</a>
       </div>
     </div>
     <div class="main-div">
@@ -26,7 +26,10 @@
         <div class="sidebar">
           <h4 class="sidebar-title">Our Animals</h4>
         </div>
-        <div class="main-content">Main Content</div>
+        <div class="main-content">
+          <h1 class="main-title">Welcome to Kangaroo Zoo</h1>
+          <p class="main-paragraph">Kangaroo Zoo is a vibrant wildlife park that showcases a wide range of unique animals from Australia. Visitors can encounter kangaroos, koalas, wombats, emus, and many other fascinating species in habitats designed to mimic their natural environment. The zoo focuses on conservation, education, and creating an unforgettable experience for guests of all ages.</p>
+        </div>
       </div>
     </div>
     <div class="footer">
