added hambyrger icon, added click function to hamburger menu

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <script src="./scripts/script.js" type="module"></script>
     <title>Document</title>
   </head>
@@ -23,12 +30,22 @@
     <div class="main-div">
       <div class="banner"></div>
       <div class="main">
+        <div class="sidebar-menu-icon">
+          <i class="fa-solid fa-bars hide"></i>
+        </div>
         <div class="sidebar">
           <h4 class="sidebar-title">Our Animals</h4>
         </div>
         <div class="main-content">
           <h1 class="main-title">Welcome to Kangaroo Zoo</h1>
-          <p class="main-paragraph">Kangaroo Zoo is a vibrant wildlife park that showcases a wide range of unique animals from Australia. Visitors can encounter kangaroos, koalas, wombats, emus, and many other fascinating species in habitats designed to mimic their natural environment. The zoo focuses on conservation, education, and creating an unforgettable experience for guests of all ages.</p>
+          <p class="main-paragraph">
+            Kangaroo Zoo is a vibrant wildlife park that showcases a wide range
+            of unique animals from Australia. Visitors can encounter kangaroos,
+            koalas, wombats, emus, and many other fascinating species in
+            habitats designed to mimic their natural environment. The zoo
+            focuses on conservation, education, and creating an unforgettable
+            experience for guests of all ages.
+          </p>
         </div>
       </div>
     </div>
