changed the js code for the side bar buttons and added short summary and images

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="Home">Home</a>
       <a href="Mammals">Mammals</a>
       <a href="Birds">Birds</a>
-      <a href="Reptiles">Reptiles</a>
+      <a href="reptiles.html">Reptiles</a>
       <a href="About">About</a>
     </div>
   </div>
