--- a/birds.html
+++ b/birds.html
@@ -24,7 +24,7 @@
     <div class="main-div">
       <div class="banner-birds"></div>
       <div class="main">
-        <div class="sidebar"></div>
+        <div class="sidebar">Birds</div>
         <div class="main-content">
           <h1>Birds</h1>
           <p>
