added a close button from font awesome and tryed to add javascript to it

--- a/index.html
+++ b/index.html
@@ -34,8 +34,16 @@
           <i class="fa-solid fa-bars hide"></i>
         </div>
         <div class="sidebar">
+          <div class="close-button">
+            <i
+              class="fa-solid fa-delete-left fa-2xl fa-fade"
+              style="color: #4e5156"
+            ></i>
+          </div>
+
           <h4 class="sidebar-title">Our Animals</h4>
         </div>
+
         <div class="main-content">
           <h1 class="main-title">Welcome to Kangaroo Zoo</h1>
           <p class="main-paragraph">
