added a close button and connected logic to it in javascript

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="sidebar">
           <div class="close-button">
             <i
-              class="fa-solid fa-delete-left fa-2xl fa-fade"
+              class="fa-solid fa-xmark fa-2xl fa-fade close-icon"
               style="color: #4e5156"
             ></i>
           </div>
