--- a/birds.html
+++ b/birds.html
@@ -14,10 +14,10 @@
         <img src="./images/Logo.png" alt="Logo" />
       </div>
       <div class="navbar">
-        <a href="Home">Home</a>
+        <a href="index.html">Home</a>
         <a href="Mammals">Mammals</a>
         <a href="birds.html">Birds</a>
-        <a href="Reptiles">Reptiles</a>
+        <a href="reptiles.html">Reptiles</a>
         <a href="About">About</a>
       </div>
     </div>
