--- a/birds.html
+++ b/birds.html
@@ -14,11 +14,11 @@
         <img src="./images/Logo.png" alt="Logo" />
       </div>
       <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="Mammals">Mammals</a>
+        <a class="active" href="index.html">Home</a>
+        <a href="mammals.html">Mammals</a>
         <a href="birds.html">Birds</a>
         <a href="reptiles.html">Reptiles</a>
-        <a href="About">About</a>
+        <a href="about.html">About</a>
       </div>
     </div>
     <div class="main-div">
