about branch created

--- a/about.html
+++ b/about.html
@@ -11,8 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <script src="./scripts/script.js" type="module"></script>
-    <title>Document</title>
+    <title>About</title>
   </head>
 
   <body>
