add:logo and footer with actual one

--- a/mammals.html
+++ b/mammals.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/mammals.css" />
-
+    <link rel="stylesheet" href="./styles/mammals.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <script src="./scripts/mammals.js" type="module"></script>
     <title>Mammals</title>
   </head>
   <body>
     <div class="header">
-      <div class="logo"></div>
+      <div class="logo">
+        <img src="./images/Logo.png" alt="Logo" />
+      </div>
       <div class="navbar">
         <a href="index.html">Home</a>
         <a href="mammals.html">Mammals</a>
@@ -26,6 +28,43 @@
         <div class="main-content"></div>
       </div>
     </div>
-    <div class="footer">Footer</div>
+    <div class="footer"><div class="footer-div footer-logo">
+        <div class="footer-logo-title">
+          <img src="./images/Logo.png" alt="Kangaroo Zoo logo" />
+          <h4>Kangaroo Zoo</h4>
+        </div>
+        <p>
+          Dedicated to wildlife conservation,<br />
+          education, and providing exceptional care<br />
+          for our animal residents since 1985.
+        </p>
+      </div>
+      <div class="footer-div">
+        <h4>Contact Us</h4>
+        <p>123 Wildlife Drive, Nature City, NC 12345</p>
+        <p>(555) 123-4567</p>
+        <p>info@wildlifezoo.com</p>
+      </div>
+
+      <div class="footer-div">
+        <h4>Visiting Hours</h4>
+        <p>Monday - Friday:9:00 AM - 6:00 PM</p>
+        <p>Saturday - Sunday:8:00 AM - 7:00 PM</p>
+        <p>Holidays:10:00 AM - 5:00 PM</p>
+      </div>
+
+      <div class="footer-div">
+        <h4>Follow Us</h4>
+        <p>
+          Stay connected for updates, events, and<br />
+          animal stories!
+        </p>
+      </div>
+
+      <div class="footer-copyright">
+        <p>&copy; 2025 Kangaroo Zoo. All rights reserved.</p>
+      </div>
+    </div>
+  </div>
   </body>
 </html>
