--- a/index.html
+++ b/index.html
@@ -59,10 +59,22 @@
       </div>
     </div>
   <div class="footer">
-    <div class="footer-div footer-logo">
-      <div class="footer-logo-title">
-        <img src="./images/Logo.png" alt="Kangaroo Zoo logo" />
-        <h4>Kangaroo Zoo</h4>
+      <div class="footer-div footer-logo">
+        <div class="footer-logo-title">
+          <img src="./images/Logo.png" alt="Kangaroo Zoo logo" />
+          <h4>Kangaroo Zoo</h4>
+        </div>
+        <p>
+          Dedicated to wildlife conservation,<br />
+          education, and providing exceptional care<br />
+          for our animal residents since 1985.
+        </p>
+      </div>
+      <div class="footer-div">
+        <h4>Contact Us</h4>
+        <p>123 Wildlife Drive, Nature City, NC 12345</p>
+        <p>(555) 123-4567</p>
+        <p>info@wildlifezoo.com</p>
       </div>
 
       <div class="footer-div">
