--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
         <i class="fa-solid fa-bars hide"></i>
       </div>
       <div class="navbar">
-      <a href="index.html" aria-current="page">Home</a>
-      <a href="mammals.html">Mammals</a>
-      <a href="birds.html">Birds</a>
-      <a href="reptiles.html">Reptiles</a>
-      <a href="about.html">About</a>
-    </div>
+        <a href="index.html" aria-current="page">Home</a>
+        <a href="mammals.html">Mammals</a>
+        <a href="birds.html">Birds</a>
+        <a href="reptiles.html">Reptiles</a>
+        <a href="about.html">About</a>
+      </div>
     </div>
     <div class="main-div">
       <div class="banner"></div>
       <div class="main">
         <div class="sidebar-menu-icon">
-          <i class="fa-solid fa-bars hide"></i>
+          <i class="fa-solid fa-bars hide sideburger-menu"></i>
         </div>
         <div class="sidebar">
           <div class="close-button">
@@ -58,7 +58,7 @@
         </div>
       </div>
     </div>
-  <div class="footer">
+    <div class="footer">
       <div class="footer-div footer-logo">
         <div class="footer-logo-title">
           <img src="./images/Logo.png" alt="Kangaroo Zoo logo" />
