change sidebar-class for homepage only so the correct styling is added

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="sidebar-menu-icon">
           <i class="fa-solid fa-bars hide sideburger-menu"></i>
         </div>
-        <div class="sidebar">
+        <div class="sidebar-home">
           <div class="close-button">
             <i
               class="fa-solid fa-xmark fa-2xl fa-fade close-icon"
