--- a/birds.html
+++ b/birds.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/birds.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <script src="./scripts/birds.js" type="module"></script>
     <title>Document</title>
   </head>
@@ -12,6 +16,9 @@
     <div class="header">
       <div class="logo">
         <img src="./images/Logo.png" alt="Logo" />
+      </div>
+      <div class="ham_menu">
+        <i class="fa-solid fa-bars hide"></i>
       </div>
       <div class="navbar">
         <a class="active" href="index.html">Home</a>
