added correct title for home page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <script src="./scripts/script.js" type="module"></script>
-    <title>Document</title>
+    <title>Kangaroo Zoo | Home</title>
   </head>
   <body>
     <div class="header">
