--- a/mammals.html
+++ b/mammals.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/mammals.css" />
-
+    <link rel="stylesheet" href="./styles/style.css">
     <script src="./scripts/mammals.js" type="module"></script>
     <title>Mammals</title>
   </head>
