--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -38,22 +38,15 @@
         </div>
         <div class="sidebar-home">
           <div class="close-button">
-            <i
-              class="fa-solid fa-xmark fa-2xl fa-fade close-icon"
-              style="color: #4e5156"
-            ></i>
+            <i class="fa-solid fa-xmark fa-2xl fa-fade close-icon" style="color: #4e5156"></i>
           </div>
           <h4 class="sidebar-title">Our Animals</h4>
         </div>
         <div class="main-content">
           <h1 class="main-title">Welcome to Kangaroo Zoo</h1>
           <p class="main-paragraph">
-            Kangaroo Zoo is a vibrant wildlife park that showcases a wide range
-            of unique animals from Australia. Visitors can encounter kangaroos,
-            koalas, wombats, emus, and many other fascinating species in
-            habitats designed to mimic their natural environment. The zoo
-            focuses on conservation, education, and creating an unforgettable
-            experience for guests of all ages.
+            Kangaroo Zoo is a vibrant wildlife park that showcases a wide range of unique animals from Australia. Visitors can encounter kangaroos, koalas, wombats, emus, and many other fascinating
+            species in habitats designed to mimic their natural environment. The zoo focuses on conservation, education, and creating an unforgettable experience for guests of all ages.
           </p>
         </div>
       </div>
