html nav bar fix

--- a/about.html
+++ b/about.html
@@ -13,6 +13,9 @@
       <div class="logo">
         <img src="./images/Logo.png" alt="Logo" />
       </div>
+      <div class="ham_menu">
+        <i class="fa-solid fa-bars hide"></i>
+      </div>
       <div class="navbar">
         <a href="index.html">Home</a>
         <a href="mammals.html">Mammals</a>
