--- a/reptiles.html
+++ b/reptiles.html
@@ -7,6 +7,13 @@
   <title>Reptiles</title>
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/reptiles.css">
+  <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   <script src="./scripts/reptiles.js" defer></script>
 </head>
 
@@ -15,6 +22,9 @@
     <div class="logo">
       <img src="./images/Logo.png" alt="Logo" />
     </div>
+    <div class="ham_menu">
+        <i class="fa-solid fa-bars hide"></i>
+      </div>
     <div class="navbar">
       <a href="index.html">Home</a>
       <a href="Mammals">Mammals</a>
