Did all the fixes needed to make the webpage work correctly

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
       referrerpolicy="no-referrer"
     />
     <script src="./scripts/about.js" type="module"></script>
-    <title>Document</title>
+  <title>Kangaroo Zoo | About</title>
   </head>
   <body>
     <div class="header">
@@ -28,7 +28,7 @@
         <a href="mammals.html">Mammals</a>
         <a href="birds.html">Birds</a>
         <a href="reptiles.html">Reptiles</a>
-        <a href="about.html">About</a>
+        <a href="about.html" aria-current="page">About</a>
       </div>
     </div>
     <div class="main-div">
