--- a/birds.html
+++ b/birds.html
@@ -10,7 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <script src="./scripts/birds.js" type="module"></script>
-    <title>Document</title>
+   <title>Kangaroo Zoo | Birds</title>
   </head>
   <body>
     <div class="header">
@@ -23,7 +23,7 @@
       <div class="navbar">
         <a class="active" href="index.html">Home</a>
         <a href="mammals.html">Mammals</a>
-        <a href="birds.html">Birds</a>
+        <a href="birds.html" aria-current="page">Birds</a>
         <a href="reptiles.html">Reptiles</a>
         <a href="about.html">About</a>
       </div>
