--- a/reptiles.html
+++ b/reptiles.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reptiles</title>
+ <title>Kangaroo Zoo | Reptiles</title>
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/reptiles.css">
   <link
@@ -16,7 +16,6 @@
     />
   <script src="./scripts/reptiles.js" defer></script>
 </head>
-
 <body>
   <div class="header">
     <div class="logo">
@@ -27,10 +26,10 @@
       </div>
     <div class="navbar">
       <a href="index.html">Home</a>
-      <a href="Mammals">Mammals</a>
-      <a href="Birds">Birds</a>
-      <a href="reptiles.html">Reptiles</a>
-      <a href="About">About</a>
+      <a href="mammals.html">Mammals</a>
+      <a href="birds.html">Birds</a>
+      <a href="reptiles.html" aria-current="page">Reptiles</a>
+      <a href="about.html">About</a>
     </div>
   </div>
   <div class="main-div">
