--- a/mammals.html
+++ b/mammals.html
@@ -6,20 +6,29 @@
     <link rel="stylesheet" href="./styles/mammals.css" />
     <link rel="stylesheet" href="./styles/style.css">
     <script src="./scripts/mammals.js" type="module"></script>
-    <title>Mammals</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>Kangaroo Zoo | Mammals</title>
   </head>
   <body>
     <div class="header">
-      <div class="logo"></div>
+      <div class="logo">
+        <img src="./images/Logo.png" alt="Logo" />
+      </div>
       <div class="ham_menu">
         <i class="fa-solid fa-bars hide"></i>
       </div>
       <div class="navbar">
         <a href="index.html">Home</a>
         <a href="mammals.html">Mammals</a>
-        <a href="Birds">Birds</a>
-        <a href="Reptiles">Reptiles</a>
-        <a href="About">About</a>
+        <a href="birds.html">Birds</a>
+        <a href="reptiles.html">Reptiles</a>
+        <a href="about.html">About</a>
       </div>
     </div>
     <div class="main-div">
