--- a/reptiles.html
+++ b/reptiles.html
@@ -22,7 +22,9 @@
 <body>
   <div class="header">
     <div class="logo">
-      <img src="./images/Logo.png" alt="Logo" />
+        <a href="/">
+          <img src="./images/Logo.png" alt="Logo" />
+        </a>
     </div>
     <div class="ham_menu">
         <i class="fa-solid fa-bars hide"></i>
