added correct home-link on a-element on every page

--- a/birds.html
+++ b/birds.html
@@ -29,7 +29,7 @@
         <i class="fa-solid fa-bars hide"></i>
       </div>
       <div class="navbar">
-        <a class="active" href="index.html">Home</a>
+        <a class="active" href="/">Home</a>
         <a href="mammals.html">Mammals</a>
         <a href="birds.html" aria-current="page">Birds</a>
         <a href="reptiles.html">Reptiles</a>
