--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <i class="fa-solid fa-bars hide"></i>
       </div>
       <div class="navbar">
-        <a href="index.html" aria-current="page">Home</a>
+        <a href="/" aria-current="page">Home</a>
         <a href="mammals.html">Mammals</a>
         <a href="birds.html">Birds</a>
         <a href="reptiles.html">Reptiles</a>
