--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
         <i class="fa-solid fa-bars hide"></i>
       </div>
       <div class="navbar">
-        <a href="index.html">Home</a>
+        <a href="/">Home</a>
         <a href="mammals.html">Mammals</a>
         <a href="birds.html">Birds</a>
         <a href="reptiles.html">Reptiles</a>
